# sunzip

./: .gitignore  Cargo.toml  README.md  s7zip.rs  sunzip.rs
.github/workflows/: ci.yml
sunzip/: errors.rs
